--- a/0x02-CSS_advanced/styles/2-style.css
+++ b/0x02-CSS_advanced/styles/2-style.css
@@ -1,9 +1,11 @@
+/*add colour to body and making the scroll behaviour smooth*/
 html {
   scroll-behavior: smooth;
 }
+/* body*/
 body {
   color: #161616;
-}
+} */
 a {
   color: #161616;
 }
