--- a/0x02-CSS_advanced/styles/3-style.css
+++ b/0x02-CSS_advanced/styles/3-style.css
@@ -4,28 +4,28 @@ html {
 }
 /*root*/
 :root{
-  color-primary:#d73953;
-  color-black: #090909;
-  color-white: #ffffff;
-  color-ligt-grey :#f3f3f3;
-  color-dark-grey: #353535;
-  text-color:color-black;
+  --color-primary:#d73953;
+  --color-black: #090909;
+  --color-white: #ffffff;
+  --color-ligt-grey :#f3f3f3;
+  --color-dark-grey: #353535;
+  --text-color:color-black;
 }
 /* body*/
 body {
-  color: text-color;
-} */
+  color: var(--text-color);
+} 
 a {
-  color: text-color;
+  color: var(--text-color);
 }
 .visually-hidden {
   display: none;
 }
 
 .card-category {
-  color: color-primary;
+  color: var(--color-primary);
 }
 
 .section-tagline {
- background-color: color-primary;
+ background-color: var(--color-primary);
 }
