--- a/0x02-CSS_advanced/styles/4-style.css
+++ b/0x02-CSS_advanced/styles/4-style.css
@@ -1,4 +1,4 @@
-/* added color in root*/
+/* added fonts in root and declared them in body and all 6 levels of headings*/
 html {
   scroll-behavior: smooth;
 }
