--- a/0x02-CSS_advanced/styles/4-style.css
+++ b/0x02-CSS_advanced/styles/4-style.css
@@ -16,7 +16,7 @@ html {
 /* body*/
 body {
   color: var(--text-color);
-  font-family: --font-family-base;
+  font-family: var(--font-family-base);
 } 
 
 a {
