--- a/0x02-CSS_advanced/styles/5-style.css
+++ b/0x02-CSS_advanced/styles/5-style.css
@@ -1,6 +1,7 @@
-/* added fonts in root and declared them in body and all 6 levels of headings*/
+/* declared various fonts size in root, added them in body and set font size in html*/
 html {
   scroll-behavior: smooth;
+  font-size: 62.5%;
 }
 /*root*/
 :root{
@@ -12,12 +13,17 @@ html {
   --text-color:color-black;
   --font-family-base: "Helvetica Neue", Helvetica, Arial, sans-serif;
   --font-family-title: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  
+  --font-size-small: 1.2rem;
+  --font-size-medium: 1.6rem;
+  --font-size-large: 1.8rem;
+  --font-size-x-large: 2.3rem;
+  --font-size-xx-large: 4.8rem;
 }
 /* body*/
 body {
   color: var(--text-color);
   font-family: var(--font-family-base);
+  font-size: var(--font-size-medium);
 } 
 
 a {
