--- a/0x02-CSS_advanced/styles/11-style.css
+++ b/0x02-CSS_advanced/styles/11-style.css
@@ -54,7 +54,8 @@ a {
 
 .section-tagline {
  background-color: var(--color-primary);
- font-family: var(--font-family-title) ;
+ font-family: var(--font-family-title);
+ text-transform: var(----section-tagline-transform);
  font-weight: var(--font-weight-bold);
 }
 
