--- a/0x02-CSS_advanced/styles/13-style.css
+++ b/0x02-CSS_advanced/styles/13-style.css
@@ -47,6 +47,9 @@ a:visited{
 a:hover{
   text-decoration: underline;
 }
+a:active{
+  color: var(--color-light-grey);
+}
 
 .visually-hidden {
   display: none;
