--- a/0x02-CSS_advanced/styles/17-style.css
+++ b/0x02-CSS_advanced/styles/17-style.css
@@ -378,11 +378,11 @@ html {
   --section-tagline-transform: uppercase;
   --section-title-margin: 0;
   --section-title-color: var(--color-black)
-  --section-padding: 5rem,0;
-  --section-header-padding: 0,0,3rem;
-  --section-body-padding: 3rem,0,0;
+  --section-padding: 5rem 0;
+  --section-header-padding: 0 0 3rem;
+  --section-body-padding: 3rem 0 0;
   --section-footer-align: center;
-  --footer-padding: 5rem,0,1rem;
+  --footer-padding: 5rem 0 1rem;
   
   
 }
