--- a/0x02-CSS_advanced/styles/18-style.css
+++ b/0x02-CSS_advanced/styles/18-style.css
@@ -476,7 +476,7 @@ h1, h2, h3, h4, h5, h6 {
   list-style: none;
   text-align: center;
 }
-.nav-item{
+.nav .nav-item{
   font-family: var(--nav-item-font-family);
   font-weight: var(--nav-item-font-weight);
   font-size:  var(--nav-item-font-size);
@@ -484,11 +484,11 @@ h1, h2, h3, h4, h5, h6 {
   display: var(--nav-item-display);
   margin: var(--nav-item-margin);
 }
-.nav-link{
+.nav .nav-link{
   display: block ;
   padding: 50% 100%;
 }
-.nav-link :hover{
+.nav .nav-link :hover{
   color: var(--nav-item-link-hover);
 }
 .
