--- a/0x02-CSS_advanced/styles/20-style.css
+++ b/0x02-CSS_advanced/styles/20-style.css
@@ -498,7 +498,7 @@ ul .row{
   list-style: none;
 }
 /* Clear the context of the grid */
-.row :after{
+.row ::after{
   content: "";
   display: table;
   clear: both;
