--- a/0x02-CSS_advanced/styles/22-style.css
+++ b/0x02-CSS_advanced/styles/22-style.css
@@ -511,8 +511,9 @@ ul .row{
   padding: 0.5rem;
 }
 
-[data-section-theme=“dark”]{
-  --text-color: var(--color-white);
+/* Add a dark theme to sections */
+[data-section-theme="dark"] {
+	--text-color: var(--color-white);
 	--section-title-color: var(--color-white);
 	background-color: var(--color-black);
 	--button-color: var(--color-white);
