--- a/0x02-CSS_advanced/styles/24-style.css
+++ b/0x02-CSS_advanced/styles/24-style.css
@@ -533,14 +533,15 @@ ul .row{
  text-align: right;
 }
 
-.footer-address{
-  color: var(--text-color);
+.footer-address {
+    color: var(--text-color);
+    
 }
 
-.style-link{
- display: block;
+.social-link {
+    display: block;
 }
 
-.style-link > svg{
-  color: var(--text-color);
+.social-link > svg {
+    fill: var(--text-color);
 }
