--- a/0x02-CSS_advanced/styles/24-style.css
+++ b/0x02-CSS_advanced/styles/24-style.css
@@ -423,6 +423,23 @@ a:active{
 .card-category {
   color: var(--color-primary);
 }
+
+.card-services > card-title{
+  margin: 0;
+}
+
+.card-services a{
+  display: block;
+  padding: 2rem;
+  background-color: var(--color-light-grey);
+}
+
+.card-services a :hover {
+  color: var(--color-white);
+  background-color: var(--color-primary);
+  text-decoration: none;
+}
+
 .section {
   padding: var(--section-padding);
 }
