--- a/0x02-CSS_advanced/styles/26-style.css
+++ b/0x02-CSS_advanced/styles/26-style.css
@@ -556,7 +556,7 @@ ul .row{
   text-align: center;
 }
 
-.card-testimonial .card-quote{
+.card-testimonial .card-quote cite{
   border-radius: 50%;
   width: 10rem;
   height: 10rem;
