--- a/0x02-CSS_advanced/styles/26-style.css
+++ b/0x02-CSS_advanced/styles/26-style.css
@@ -556,13 +556,13 @@ ul .row{
   text-align: center;
 }
 
-.card-testimonial .card-quote cite{
+.card-testimonial .card-avatar{
   border-radius: 50%;
   width: 10rem;
   height: 10rem;
 }
 
-.card-testimonial .card-avatar cite{
+.card-testimonial .card-quote cite{
   display: block;
   padding-top: 1rem;
   color: var(--color-primary);
