--- a/0x02-CSS_advanced/styles/27-style.css
+++ b/0x02-CSS_advanced/styles/27-style.css
@@ -476,7 +476,7 @@ a:active{
   padding: var(--section-body-padding);
 }
 .section-hero{
-  background-size:90rem auto;
+  background-size: 90rem auto;
 }
 
  .section-hero .section-title{
@@ -484,7 +484,7 @@ a:active{
  }
 
 .section-hero .section-inner{
-  padding: 10rem, 40rem, 2rem, 0;
+  padding: 10rem 40rem 2rem 0;
 }
 
 .section-footer{
