--- a/0x02-CSS_advanced/styles/28-style.css
+++ b/0x02-CSS_advanced/styles/28-style.css
@@ -537,8 +537,8 @@ a:active{
 .header-logo a{
   display: var(--header-logo-link-display);
   position: var(--header-logo-link-position);
-  left: var(--header-logo-link-top);
-  top: var(--header-logo-link-left);
+  left: var(--header-logo-link-left);
+  top: var(--header-logo-link-top);
 }
 
 .container{
